Renname availableValues to allowedValues, title to label in filterable props OpenAPI extensions
